2009-11-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.114-1

2009-11-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Regression fix: Task launcher subview should return to the top every
	                time it is viewed.

	* src/launcher/hd-launcher-grid.c: Set H and V adjustments to 0 at the
	  start of a transition that first shows a launcher page.

2009-11-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#142324 - UI freezes with HildonAppMenu opened and Close
	non-responsive dialog appearing

	* src/mb/hd-wm.c (hd_wm_client_hang): Store XID of the hung dialog.
	* src/mb/hd-note.c (hd_note_stacking_layer): If the hung dialog is
	being stacked and there is an application menu, stack it above the
	menu.
	* src/mb/hd-wm.[ch] (hd_wm_get_hung_client_dialog_xid): New accessor
	for XID of the hung dialog.

2009-11-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Make the launcher tree population visually quicker.

	* src/launcher/hd-launcher.c (hd_launcher_lazy_traverse_tree):
	  Add the tiles in 15-item batches.  When booting this cuts the
	  tree traversal from >20s to 10-17s (97 .desktop files).
	  When the device is unloaded the time drop from 10s to 2.6s,
	  which is useful when hacking the launcher.

2009-11-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#143521 - Task launcher (and switcher) panning is broken
	
	* src/tidy/tidy-finger-scroll.c: Deal with the fact that a 
	  clutter-timeline may skip frames, and make sure we multiply our
	  movement to overcome this.

	Fixes: NB#141640 - Multiple taps not handled during application launch

	* src/home/hd-render-manager.c: Make sure we don't fade out the launch
	  screenshot unless we're going to the APP state (otherwise remove it
	  instantly)
	* src/launcher/hd-launcher.c: Add a 10 second timeout to the loading
	  window - If that app still hasn't started after that return to home
	  or switcher. Now ignore taps on the loading screen, rather than 